--- a/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
@@ -115,6 +115,7 @@ power_folder_logo_400_ui.icon=de/dal33t/powerfolder/skin/greendream/icons/Logo40
 powerfolder_32.icon=de/dal33t/powerfolder/skin/greendream/icons/Icon32x32.png
 preferences.icon=de/dal33t/powerfolder/skin/greendream/icons/Preferences.png
 preview_folder.icon=de/dal33t/powerfolder/skin/greendream/icons/PreviewFolder.png
+typical_folder.icon=de/dal33t/powerfolder/skin/greendream/icons/NewFolder.png
 problems.icon=de/dal33t/powerfolder/skin/greendream/icons/Warning.png
 question.icon=de/dal33t/powerfolder/skin/greendream/icons/Question.png
 new_folder.icon=de/dal33t/powerfolder/skin/greendream/icons/NewFolder.png
