--- a/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
@@ -114,6 +114,7 @@ power_folder_logo_400_ui.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Logo40
 powerfolder_32.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Icon32x32.png
 preferences.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Preferences.png
 preview_folder.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/PreviewFolder.png
+typical_folder.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/NewFolder.png
 problems.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Warning.png
 question.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Question.png
 new_folder.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/NewFolder.png
