--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -140,6 +140,7 @@ powerfolder_32.icon=de/dal33t/powerfolder/skin/lightsky/icons/Icon32x32.png
 picto_logo_128.icon=de/dal33t/powerfolder/skin/lightsky/icons/Icon128x128.png
 preferences.icon=de/dal33t/powerfolder/skin/lightsky/icons/Preferences.png
 preview_folder.icon=de/dal33t/powerfolder/skin/lightsky/icons/PreviewFolder.png
+typical_folder.icon=de/dal33t/powerfolder/skin/lightsky/icons/NewFolder.png
 problems.icon=de/dal33t/powerfolder/skin/lightsky/icons/Warning.png
 question.icon=de/dal33t/powerfolder/skin/lightsky/icons/Question.png
 settings.icon=de/dal33t/powerfolder/skin/lightsky/icons/Settings.png
