Rename Advanced to Expert, refs #2610

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1274,7 +1274,7 @@ plugin_settings.description=Configure this plugin now
 preferences.dialog.auto_setup_folders=Automatically setup folders
 preferences.dialog.advPort.tooltip=Enter a comma-separated list of ports {APPNAME} should listen for connections on
 preferences.dialog.advPort=Port
-preferences.dialog.advanced.title=Advanced
+preferences.dialog.expert.title=Expert
 preferences.dialog.archive_cleanup=Cleanup
 preferences.dialog.archive_cleanup_day=1 day
 preferences.dialog.archive_cleanup_week=1 week
@@ -1366,7 +1366,7 @@ preferences.dialog.server_disconnect=While disconnected
 preferences.dialog.server_disconnect.sync=Skip permission checks. Sync files anyways
 preferences.dialog.server_disconnect.nosync=Enforce permission checks. Don't sync files
 
-preferences.dialog.advanced_mode=Advanced mode
+preferences.dialog.expert_mode=Expert mode
 preferences.dialog.backup_only_clinet=Backup-only client
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_system_notifications=Show system notifications when minimized
