Begin information preference tab, refs #2610

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -884,8 +884,6 @@ find_computers_panel.search_for_computer.tooltip=Enter three or more characters 
 folder.info_tip=Contains files and folders managed by {APPNAME}
 
 folder_list.my_folders=My folders
-folders_list.collapse_hint=Collapse group
-folders_list.expand_hint=Expand group
 
 folder_create.os_error.text=Unable to setup the cloud to backup folder {0}
 folder_create.dialog.select_directory.text=Select directory
@@ -1335,6 +1333,7 @@ preferences.dialog.folder_sync_text=Warning days
 preferences.dialog.skin_text=Skin
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
+preferences.dialog.information.title=Information
 preferences.dialog.information_panel_docked=Information window docked
 preferences.dialog.language=Language
 preferences.dialog.lan_line_settings=LAN speed
