Better delta time, fixes #2605

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -952,10 +952,11 @@ folder_remove.dialog.text=Remove folder {0}?
 folder_remove.dialog.online_text=Remove online folder {0}?
 folder_remove.dialog.title=Remove Folder
 
-uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
-uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA: {1}
-uicontroller.warn_on_close.title=Syncing
-uicontroller.continue_exit=Exit anyways
+format.n.days={0} days
+format.n.hours={0} hours
+format.n.minutes={0} minutes
+format.one_minute=1 minute
+format.less_than_one_minute=Less than one minute
 
 free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_recommendation2={APPNAME} is currently disabled until you take action.
@@ -1003,7 +1004,6 @@ general.cancel=Cancel
 general.close.key=C
 general.close=Close
 general.continue=Continue
-general.days={0} days
 general.delete.key=D
 general.delete=Delete
 general.directory=Directory
@@ -1658,6 +1658,11 @@ uilock.dialog.info=Enter login credentials to unlock the user interface.
 uilock.dialog.help=Help
 uilock.dialog.exit=Exit
 uilock.dialog.error.wronglogin=Invalid username or password.
+
+uicontroller.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
+uicontroller.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA: {1}
+uicontroller.warn_on_close.title=Syncing
+uicontroller.continue_exit=Exit anyways
 
 warning_notice.title=System warning
 warning_notice.limited_connectivity=Limited connectivity detected
