Sync icons, refs #2610

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -770,6 +770,8 @@ exp_folder_view.folder_online_text=Available folder
 exp_folder_view.folder_typical_text=Recommended folder
 exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
+exp_folder_view.folder_problem_text=Display any folder problems
+exp_folder_view.folder_sync_complete=Folder is in sync
 exp_folder_view.members=Members: {0} ({1} connected)
 exp_folder_view.never_synchronized=Sync never done
 exp_folder_view.new_files_tip_text={0} new files
