Mini panel compress, refs #2610

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1172,6 +1172,7 @@ main_frame.synchronizing.2=Sync in progress...
 main_frame.in_sync=All folders are in sync
 
 main_frame.uncompact.tips=Switch to uncompact mode
+main_frame.compact.tips=Switch to compact mode
 
 main_frame.sync_unknown=Estimated sync: Unknown
 main_frame.sync_eta=Estimated sync: {0}
