--- a/.classpath
+++ b/.classpath
@@ -42,5 +42,17 @@
 	<classpathentry kind="lib" path="lib/hibernate3-stripped.jar"/>
 	<classpathentry kind="lib" path="lib/synthetica/syntheticaClassy.jar"/>
 	<classpathentry kind="lib" path="lib/synthetica/syntheticaSimple2D.jar"/>
+	<classpathentry kind="lib" path="lib/annotations-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/bcprov-jdk16-1.46.jar"/>
+	<classpathentry kind="lib" path="lib/commons-compress-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/truezip-archetype-file-7.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/truezip-driver-file-7.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/truezip-driver-tar-7.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/truezip-driver-tzp-7.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/truezip-driver-zip-7.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/truezip-file-7.4.3-sources.jar"/>
+	<classpathentry kind="lib" path="lib/truezip-file-7.4.3.jar" sourcepath="C:/Users/sprajc.POWERFOLDER/.m2/repository/de/schlichtherle/truezip/truezip-file/7.4.3/truezip-file-7.4.3-sources.jar"/>
+	<classpathentry kind="lib" path="lib/truezip-kernel-7.4.3.jar" sourcepath="C:/Users/sprajc.POWERFOLDER/.m2/repository/de/schlichtherle/truezip/truezip-kernel/7.4.3/truezip-kernel-7.4.3-sources.jar"/>
+	<classpathentry kind="lib" path="lib/truezip-swing-7.4.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
