--- a/build.xml
+++ b/build.xml
@@ -125,6 +125,19 @@ For creation of the installer:
 			<include name="synthetica/syntheticaSkyMetallic.jar" />
 			<include name="synthetica/syntheticaSimple2D.jar" />
 			<include name="synthetica/syntheticaWhiteVision.jar" />
+			
+			<!-- TrueZIP -->
+			<include name="annotations-1.0.0.jar" />
+			<include name="bcprov-jdk16-1.46.jar" />
+			<include name="commons-compress-1.3.jar" />
+			<include name="truezip-archetype-file-7.4.3.jar" />
+			<include name="truezip-driver-file-7.4.3.jar" />
+			<include name="truezip-driver-tar-7.4.3.jar" />
+			<include name="truezip-driver-tzp-7.4.3.jar" />
+			<include name="truezip-driver-zip-7.4.3.jar" />
+			<include name="truezip-file-7.4.3.jar" />
+			<include name="truezip-kernel-7.4.3.jar" />
+			<include name="truezip-swing-7.4.3.jar" />
 		</fileset>
 
 		<fileset id="testlibs" dir="lib" casesensitive="yes">
