Icon action, refs #2610

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -323,6 +323,10 @@ action_select_all.description=Select all text
 action_select_all.key=S
 action_select_all.name=Select All
 
+action_show_folders_tab.description=Show the folders tab
+action_show_folders_tab.key=S
+action_show_folders_tab.name=Show Folders
+
 action_single_file_transfer.description=Transfer file to other computer
 action_single_file_transfer.key=T
 action_single_file_transfer.name=Transfer
