--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1178,6 +1178,7 @@ main_frame.in_sync=All folders are in sync
 main_frame.uncompact.tips=Switch to uncompact mode
 main_frame.compact.tips=Switch to compact mode
 main_frame.connecting.text=Connecting...
+main_frame.account_disabled.text=Account disabled
 main_frame.loging_in.text=Logging in...
 main_frame.sync_unknown=Estimated sync: Unknown
 main_frame.sync_eta=Estimated sync: {0}
