Login action, refs #2610

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -159,6 +159,10 @@ action_link_directory.description=Link directory to an existing folder
 action_link_directory.key=L
 action_link_directory.name=Link
 
+action_login.description=Login to {APPNAME} account
+action_login.key=L
+action_login.name=Login
+
 action_maintain_folder_db.description=Maintains the internal folder database and frees up memory.
 action_maintain_folder_db.key=M
 action_maintain_folder_db.name=Maintain database
