Login prompts, refs #2610

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1187,6 +1187,8 @@ main_frame.loging_in.text=Logging in...
 main_frame.sync_unknown=Estimated sync: Unknown
 main_frame.sync_eta=Estimated sync: {0}
 main_frame.last_synced=Last sync {0}
+main_frame.account_not_set.text=Account not set
+main_frame.password_required.text=Password required
 
 main_tabbed_pane.computers.description=Details about other computers
 main_tabbed_pane.computers.key=C
