--- a/build.xml
+++ b/build.xml
@@ -130,9 +130,8 @@ For creation of the installer:
 			<include name="annotations-1.0.0.jar" />
 			<include name="bcprov-jdk16-1.46.jar" />
 			<include name="commons-compress-1.3.jar" />
-			<include name="truezip-archetype-file-7.4.3.jar" />
 			<include name="truezip-driver-file-7.4.3.jar" />
-			<include name="truezip-driver-tzp-7.4.3.jar" />
+			<!--<include name="truezip-driver-tzp-7.4.3.jar" />-->
 			<include name="truezip-driver-zip-7.4.3.jar" />
 			<include name="truezip-file-7.4.3.jar" />
 			<include name="truezip-kernel-7.4.3.jar" />
