--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -898,10 +898,10 @@ folder_list.my_folders=My folders
 folder_create.os_error.text=Unable to setup the cloud to backup folder {0}
 folder_create.dialog.select_directory.text=Select directory
 
-folder_problem.unsynchronized=Folder {0} has not been in sync for {1} days
+folder_problem.unsynchronized=Folder {0} has not been completely synced within the last {1} day(s)
 folder_problem.unsynchronized.soln_desc=Synchronize folder
-folder_problem.unsynchronized_minutes=Folder {0} has not been in sync for {1} minutess
-folder_problem.unsynchronized_hours=Folder {0} has not been in sync for {1} hours
+folder_problem.unsynchronized_minutes=Folder {0} has not been completely synced within the last {1} minute(s)
+folder_problem.unsynchronized_hours=Folder {0} has not been completely synced within the last {1} hour(s)
 folder_problem.device_disconnected=Unable to access device. Currently not available.
 folder_problem.device_disconnected.remove_folder=Stop syncing folder.
 folder_problem.table_model.date=Date
