--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -243,8 +243,16 @@ action_open_uploads_information.description=Show details of recent file uploads
 action_open_uploads_information.key=U
 action_open_uploads_information.name=Uploads
 
+action_expand_interface.description=Opens a detailed folder list
+action_expand_interface.key=O
+action_expand_interface.name=Open
+
+action_collapse_interface.description=Hides the detailed folder list
+action_collapse_interface.key=C
+action_collapse_interface.name=Collapse
+
 action_open_web_interface.description=Opens the web interface
-action_open_web_interface.key=O
+action_open_web_interface.key=W
 action_open_web_interface.name=Web
 
 action_paste.description=Paste text
@@ -1179,8 +1187,6 @@ main_frame.synchronizing.1=Sync in progress..
 main_frame.synchronizing.2=Sync in progress...
 main_frame.in_sync=All folders are in sync
 
-main_frame.uncompact.tips=Switch to uncompact mode
-main_frame.compact.tips=Switch to compact mode
 main_frame.connecting.text=Connecting...
 main_frame.account_disabled.text=Account disabled
 main_frame.loging_in.text=Logging in...
