Loging failed message, refs #2659

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1190,6 +1190,8 @@ main_frame.in_sync=All folders are in sync
 main_frame.connecting.text=Connecting...
 main_frame.account_disabled.text=Account disabled
 main_frame.loging_in.text=Logging in...
+main_frame.log_in_failed.text=Login failed
+
 main_frame.sync_unknown=Estimated sync: Unknown
 main_frame.sync_eta=Estimated sync: {0}
 main_frame.last_synced=Last sync {0}
