--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1366,6 +1366,12 @@ preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to cli
 preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to invitees, LAN computers and people who are in joined folders.<BR>{APPNAME} also connects to supernodes to find your invitees via the Internet.</BODY></HTML>
+preferences.dialog.network.pause.5minutes=5 minutes
+preferences.dialog.network.pause.1hour= 1 hour
+preferences.dialog.network.pause.8hours=8 hours
+preferences.dialog.network.pause.permanent=Permanent
+preferences.dialog.network.resume.text=Resume after pause
+preferences.dialog.network.resume.tooltip=How long to wait before automatically resuming if paused.
 preferences.dialog.nickname=Nickname
 preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
 preferences.dialog.open_port.tooltip=Opens the {APPNAME} port on the Windows Firewall
