--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -215,9 +215,9 @@ action_open_files_information.description=Open file information for this folder
 action_open_files_information.key=F
 action_open_files_information.name=Browse files
 
-action_open_folders_base.description=Open PowerFolder base directory
-action_open_folders_base.key=F
-action_open_folders_base.name=Folders
+action_open_folders_base.description=Open base directory in file browser
+action_open_folders_base.key=B
+action_open_folders_base.name=Browse
 
 action_open_members_information.description=Open information on members for this folder
 action_open_members_information.key=M
@@ -245,11 +245,11 @@ action_open_uploads_information.name=Uploads
 
 action_expand_interface.description=Opens a detailed folder list
 action_expand_interface.key=O
-action_expand_interface.name=Open
+action_expand_interface.name=Show folders
 
 action_collapse_interface.description=Hides the detailed folder list
 action_collapse_interface.key=C
-action_collapse_interface.name=Collapse
+action_collapse_interface.name=Hide folders
 
 action_open_web_interface.description=Opens the web interface
 action_open_web_interface.key=W
@@ -927,7 +927,7 @@ folder_exception.dialog.title=Problem with Folder '{0}'
 folder_information_card.files.tips=Shows file details for this folder
 folder_information_card.files.title=Files
 folder_information_card.members.tips=Shows folder member details
-folder_information_card.members.title=Members
+folder_information_card.members.title=Computers
 folder_information_card.settings.tips=Shows settings for this folder
 folder_information_card.settings.title=Settings
 folder_information_card.problems.title=Problems
