Pause dialog, etc, fixes #2485

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1275,6 +1275,14 @@ online_storage_component.online_storage_warning=cloud space quota exceeded
 out_of_memory_notice.title=Out Of Memory
 out_of_memory_notice.summary={APPNAME} is out of memory
 
+pause_dialog.title=Pause {APPNAME}
+pause_dialog.button.text=Pause
+pause_dialog.pause_label.text=Pause time
+pause_dialog.pause.5minutes=5 minutes
+pause_dialog.pause.1hour= 1 hour
+pause_dialog.pause.8hours=8 hours
+pause_dialog.pause.permanent=Permanent
+
 permissions.folder.no_access=No access
 permissions.folder.read_write=Read/Write
 permissions.folder.read=Read
@@ -1292,6 +1300,7 @@ plugin_settings.name=Configure
 plugin_settings.key=C
 plugin_settings.description=Configure this plugin now
 
+preferences.dialog.show_pause_options=Display pause options dialog
 preferences.dialog.auto_setup_folders=Automatically setup folders
 preferences.dialog.advPort.tooltip=Enter a comma-separated list of ports {APPNAME} should listen for connections on
 preferences.dialog.advPort=Port
@@ -1366,12 +1375,6 @@ preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to cli
 preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to invitees, LAN computers and people who are in joined folders.<BR>{APPNAME} also connects to supernodes to find your invitees via the Internet.</BODY></HTML>
-preferences.dialog.network.pause.5minutes=5 minutes
-preferences.dialog.network.pause.1hour= 1 hour
-preferences.dialog.network.pause.8hours=8 hours
-preferences.dialog.network.pause.permanent=Permanent
-preferences.dialog.network.resume.text=Resume after pause
-preferences.dialog.network.resume.tooltip=How long to wait before automatically resuming if paused.
 preferences.dialog.nickname=Nickname
 preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
 preferences.dialog.open_port.tooltip=Opens the {APPNAME} port on the Windows Firewall
@@ -1399,8 +1402,8 @@ preferences.dialog.backup_only_clinet=Backup-only client
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_auto_created_folders=Show notification of autocreated folders
-preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
-preferences.dialog.silent_throttle=Pause bandwidth throttle
+preferences.dialog.paused_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.paused_throttle=Pause bandwidth throttle
 preferences.dialog.online_storage.text=Use cloud space
 preferences.dialog.online_storage.tip=Setup {APPNAME} to use cloud space
 preferences.dialog.start_with_windows=Start {APPNAME} with Windows
