Sync percentage, fixes #2697

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1087,6 +1087,7 @@ status_tab.in_sync=All folders are in sync
 status_tab.last_synced=Last sync {0}
 status_tab.local=Local
 status_tab.never_synced=Folders never in sync
+status_tab.syncing=Synchronizing {0}%
 status_tab.new_invitations=New invitations
 status_tab.new_single_file_offers=New single file offers
 status_tab.unread_notices=Unread notices
@@ -1118,9 +1119,6 @@ status_tab.online_storage.title=Account
 status_tab.sync_eta=Estimated sync: {0}
 status_tab.sync_unknown=Estimated sync: Unknown
 status_tab.status=Status
-status_tab.synchronizing.0=Sync in progress.
-status_tab.synchronizing.1=Sync in progress..
-status_tab.synchronizing.2=Sync in progress...
 status_tab.tell_friend.text=Tell someone about {APPNAME}
 status_tab.tell_friend.tip=Click here to recommend {APPNAME}
 status_tab.total={0} total
@@ -1182,10 +1180,8 @@ main_frame.inline_info_close.tip=Close information panel
 main_frame.not_running=Not running
 main_frame.no_folders=No folders configured
 main_frame.never_synced=Folders never in sync
-main_frame.synchronizing.0=Sync in progress.
-main_frame.synchronizing.1=Sync in progress..
-main_frame.synchronizing.2=Sync in progress...
 main_frame.in_sync=All folders are in sync
+main_frame.syncing=Synchronizing {0}%
 
 main_frame.connecting.text=Connecting...
 main_frame.account_disabled.text=Account disabled
