Pause tray icon, fixes #2700

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1588,6 +1588,7 @@ systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.down=Down {0} KBs
 systray.tooltip.in_sync=in sync
 systray.tooltip.syncing=syncing
+systray.tooltip.paused=paused
 systray.tooltip.not_connected=Not connected
 systray.tooltip.not_logged_in=Not logged in
 systray.tooltip.new_problem=New problem
