--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -577,7 +577,7 @@ about_dialog.system_monitor.tips=Display a system monitor panel
 
 about_dialog.activate.key=A
 about_dialog.activate.text=Activate
-about_dialog.activate.tips=Activates PowerFolder with new license
+about_dialog.activate.tips=Activates {APPNAME} with new license
 
 about_dialog.team=Team
 about_dialog.title=About {APPNAME}
