refs #2659 Luna finalizations

--- a/src/skins/de/dal33t/powerfolder/skin/origin/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/origin/icons.properties
@@ -150,6 +150,7 @@ systray_sync09.icon=de/dal33t/powerfolder/skin/origin/icons/SystraySync09.png
 systray_sync10.icon=de/dal33t/powerfolder/skin/origin/icons/SystraySync10.png
 systray_sync11.icon=de/dal33t/powerfolder/skin/origin/icons/SystraySync11.png
 systray_sync_complete.icon=de/dal33t/powerfolder/skin/origin/icons/SystraySyncComplete.png
+systray_warning.icon=de/dal33t/powerfolder/skin/origin/icons/SystrayWarning.png
 
 system_monitor.icon=de/dal33t/powerfolder/skin/origin/icons/SystemMonitor.png
 unknown.icon=de/dal33t/powerfolder/skin/origin/icons/Unknown.png
