refs #2659 Luna finalizations

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1371,7 +1371,7 @@ preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to cli
 preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to invitees, LAN computers and people who are in joined folders.<BR>{APPNAME} also connects to supernodes to find your invitees via the Internet.</BODY></HTML>
-preferences.dialog.nickname=Nickname
+preferences.dialog.nickname=Computer name
 preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
 preferences.dialog.open_port.tooltip=Opens the {APPNAME} port on the Windows Firewall
 preferences.dialog.open_port=Automatically open Windows Firewall
