refs #2659 Luna finalizations

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1178,6 +1178,7 @@ main_frame.close.tips=Close
 main_frame.inline_info_close.tip=Close information panel
 
 main_frame.not_running=Not running
+main_frame.activate_now=Activate now
 main_frame.no_folders=No folders configured
 main_frame.never_synced=Folders never in sync
 main_frame.in_sync=All folders are in sync
@@ -1754,7 +1755,6 @@ wizard.finish.os_login_title=Login Successful
 wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 wizard.folder_invitation.title=Folder Invitation
 wizard.folder_auto_create.title=Folder Found
-wizard.folder_auto_create.info=A new folder has been found.
 wizard.folder_auto_create.undo.title=Undo
 wizard.folder_auto_create.undo.text=Don't sync, share or backup this folder at all
 wizard.folder_auto_create.cloud_space=Use cloud space
