--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -195,13 +195,13 @@ action_open_chat.description=Open a chat session with this computer
 action_open_chat.key=C
 action_open_chat.name=Chat
 
-action_open_debug_information.description=Open Debug information dialog
+action_open_debug_information.description=Open debug information dialog
 action_open_debug_information.key=D
 action_open_debug_information.name=Debug
 
-action_open_downloads_information.description=Show details of recent file downloads
-action_open_downloads_information.key=D
-action_open_downloads_information.name=Downloads
+action_open_tansfers_information.description=Open transfers information dialog
+action_open_tansfers_information.key=T
+action_open_tansfers_information.name=Transfers
 
 action_open_explorer.description=Explore this folder
 action_open_explorer.key=O
@@ -238,10 +238,6 @@ action_open_settings_information.name=Settings
 action_open_stats_charts.description=Open the statistics charts
 action_open_stats_charts.key=S
 action_open_stats_charts.name=Stats
-
-action_open_uploads_information.description=Show details of recent file uploads
-action_open_uploads_information.key=U
-action_open_uploads_information.name=Uploads
 
 action_expand_interface.description=Opens a detailed folder list
 action_expand_interface.key=O
@@ -1139,6 +1135,8 @@ invitation_files.description={APPNAME} invitations
 
 invitation.notification.message=You have received an invitation to a folder.
 invitation.notification.title=Invitation Received
+
+information_frame.transfers.text=Transfers
 
 limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.text={APPNAME} has detected limited connectivity to the network.\nThis may caused by a firewall or router.\nFind out how to improve your connectivity here:\n{0}
