--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -335,6 +335,10 @@ action_show_folders_tab.description=Show the folders tab
 action_show_folders_tab.key=S
 action_show_folders_tab.name=Show Folders
 
+action_show_notices.description=Display notices
+action_show_notices.key=N
+action_show_notices.name=Show Notices
+
 action_single_file_transfer.description=Transfer file to other computer
 action_single_file_transfer.key=T
 action_single_file_transfer.name=Transfer
@@ -1181,6 +1185,8 @@ main_frame.no_folders=No folders configured
 main_frame.never_synced=Folders never in sync
 main_frame.in_sync=All folders are in sync
 main_frame.syncing=Synchronizing {0}%
+main_frame.unread_notices.single.text=1 unread notice
+main_frame.unread_notices.plural.text={0} unread notices
 
 main_frame.connecting.text=Connecting...
 main_frame.account_disabled.text=Account disabled
