refs #2485 silent mode / pause

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1276,6 +1276,7 @@ out_of_memory_notice.summary={APPNAME} is out of memory
 pause_dialog.title=Pause {APPNAME}
 pause_dialog.button.text=Pause
 pause_dialog.pause_label.text=Pause time
+pause_dialog.pause.user_inactive=while I work
 pause_dialog.pause.5minutes=5 minutes
 pause_dialog.pause.1hour=1 hour
 pause_dialog.pause.8hours=8 hours
