--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1613,6 +1613,7 @@ transfer.problem.temp.file.open=Unable to create/open temp file
 transfer.problem.temp.file.write=Unable to write to temp file
 transfer.problem.transfer.broken=Transfer broken
 transfer.problem.transfer.exception=There was a TransferException\: {0}
+transfer.problem.paused=Transfer stopped by pause
 
 transfers.completed=Completed {0}
 transfers.copying=Copying data
