Sync % shows unsynced files, refs #2715

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -215,6 +215,10 @@ action_open_files_information.description=Open file information for this folder
 action_open_files_information.key=F
 action_open_files_information.name=Browse files
 
+action_open_files_unsynced.description=Display unsynchronized files
+action_open_files_unsynced.key=U
+action_open_files_unsynced.name=Unsynced
+
 action_open_folders_base.description=Open base directory in file browser
 action_open_folders_base.key=B
 action_open_folders_base.name=Browse
