WebDAV drive in wizard, refs #2659

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -389,7 +389,7 @@ action_view_notices.name=Notices
 
 action_webdav.description=Mount this folder as networked drive via WebDAV
 action_webdav.key=M
-action_webdav.name=Mount as drive
+action_webdav.name=Mount as network drive
 
 action_webview.description=Opens the web browser to view the files of the folder
 action_webview.key=B
