--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -21,3 +21,5 @@ auto.connect=false
 uploads.auto.cleanup.frequency=4
 downloads.auto.cleanup.frequency=4
 transfer.limit.autodetect=false
+# no server connection required
+server.disconnect.sync_anyways=true
