Remove Incoming filter, etc, fixes #2745

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1197,8 +1197,9 @@ main_frame.account_disabled.text=Account disabled
 main_frame.loging_in.text=Logging in...
 main_frame.log_in_failed.text=Login failed
 
-main_frame.sync_unknown=Estimated sync: Unknown
-main_frame.sync_eta=Estimated sync: {0}
+main_frame.sync_eta_days=Estimated sync: in {0} days
+main_frame.sync_eta_hours=Estimated sync: in {0} hours
+main_frame.sync_eta_minutes=Estimated sync: in {0} minutes
 main_frame.last_synced=Last sync {0}
 main_frame.account_not_set.text=Account not set
 main_frame.password_required.text=Password required
