folder eta calc, fixes #2744

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -805,6 +805,12 @@ exp_folder_view.not_yet_scanned=Not yet scanned
 exp_folder_view.files_available_tip=Display the available files
 exp_folder_view.last_synchronized=Last sync: {0}
 exp_folder_view.estimated_synchronized=Estimated sync: {0}
+exp_folder_view.sync_eta_days=Estimated sync: in {0} days
+exp_folder_view.sync_eta_one_day=Estimated sync: in 1 day
+exp_folder_view.sync_eta_hours=Estimated sync: in {0} hours
+exp_folder_view.sync_eta_one_hour=Estimated sync: in 1 hour
+exp_folder_view.sync_eta_minutes=Estimated sync: in {0} minutes
+exp_folder_view.sync_eta_one_minute=Estimated sync: in 1 minute
 exp_folder_view.estimated_unknown=Estimated sync: Unknown
 exp_folder_view.webdav_title=WebDAV
 exp_folder_view.webdav_working_text=Mount as WebDAV drive
@@ -1198,8 +1204,11 @@ main_frame.loging_in.text=Logging in...
 main_frame.log_in_failed.text=Login failed
 
 main_frame.sync_eta_days=Estimated sync: in {0} days
+main_frame.sync_eta_one_day=Estimated sync: in 1 day
 main_frame.sync_eta_hours=Estimated sync: in {0} hours
+main_frame.sync_eta_one_hour=Estimated sync: in 1 hour
 main_frame.sync_eta_minutes=Estimated sync: in {0} minutes
+main_frame.sync_eta_one_minute=Estimated sync: in 1 minute
 main_frame.last_synced=Last sync {0}
 main_frame.account_not_set.text=Account not set
 main_frame.password_required.text=Password required
