--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -148,7 +148,8 @@ sort_up.icon=de/dal33t/powerfolder/skin/lightsky/icons/SortUp.png
 splash.icon=de/dal33t/powerfolder/skin/lightsky/icons/Splash.png
 stats.icon=de/dal33t/powerfolder/skin/lightsky/icons/Chart.png
 stop.icon=de/dal33t/powerfolder/skin/lightsky/icons/Abort.png
-sleep.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sleep.png
+pause.icon=de/dal33t/powerfolder/skin/origin/icons/Pause.png
+systray_pause.icon=de/dal33t/powerfolder/skin/origin/icons/SystrayPause.png
 sync.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync00.png
 sync00.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync00.png
 sync01.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync01.png
