--- a/src/skins/de/dal33t/powerfolder/skin/origin/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/origin/icons.properties
@@ -137,7 +137,8 @@ sort_down.icon=de/dal33t/powerfolder/skin/origin/icons/SortDown.png
 sort_up.icon=de/dal33t/powerfolder/skin/origin/icons/SortUp.png
 splash.icon=de/dal33t/powerfolder/skin/origin/icons/Splash.png
 stop.icon=de/dal33t/powerfolder/skin/origin/icons/Abort.png
-sleep.icon=de/dal33t/powerfolder/skin/origin/icons/Sleep.png
+pause.icon=de/dal33t/powerfolder/skin/origin/icons/Pause.png
+systray_pause.icon=de/dal33t/powerfolder/skin/origin/icons/SystrayPause.png
 
 sync00.icon=de/dal33t/powerfolder/skin/origin/icons/Sync00.png
 sync01.icon=de/dal33t/powerfolder/skin/origin/icons/Sync01.png
