--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -929,6 +929,8 @@ folder_problem.no_owner=No owner found for folder - {0}
 folder_problem.no_owner.soln_desc=Become owner of this folder now.
 folder_problem.no_owner.no_login.title=Not logged in
 folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
+folder_problem.folderdb.description=Many database entries may slow down performance
+folder_problem.folderdb.soln_desc=Database maintenance recommended
 
 folder_exception.dialog.text=Unable to join Folder '{0}'.\nReason\: {1}
 folder_exception.dialog.title=Problem with Folder '{0}'
