refs #2659 Luna finalizations

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1196,7 +1196,7 @@ main_frame.no_folders=No folders configured
 main_frame.never_synced=Folders never in sync
 main_frame.in_sync=All folders are in sync
 main_frame.paused=Paused
-main_frame.syncing=Synchronizing {0}%
+main_frame.syncing=Synchronizing {0}
 main_frame.unread_notices.single.text=1 unread notice
 main_frame.unread_notices.plural.text={0} unread notices
 
@@ -1211,6 +1211,7 @@ main_frame.sync_eta_hours=Estimated sync: in {0} hours
 main_frame.sync_eta_one_hour=Estimated sync: in 1 hour
 main_frame.sync_eta_minutes=Estimated sync: in {0} minutes
 main_frame.sync_eta_one_minute=Estimated sync: in 1 minute
+main_frame.sync_eta_unknown=Estimated sync: Unknown
 main_frame.last_synced=Last sync {0}
 main_frame.account_not_set.text=Account not set
 main_frame.password_required.text=Password required
